--- a/.github/workflows/release_package.yml
+++ b/.github/workflows/release_package.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@v2
         with:
           registry-url: https://registry.npmjs.org/
           node-version: '14'
