--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "react-clicktopay",
   "description": "ClickToPay for React",
   "author": "wellingtonsilverio",
-  "keywords": ["react", "components", "ui", "clicktopay", "mastercard"],
-  "version": "0.1.6",
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "clicktopay",
+    "mastercard"
+  ],
+  "version": "0.1.7",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": [ "dist", "README.md" ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wellingtonsilverio/react-clicktopay"
@@ -17,6 +26,8 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,18 +49,25 @@
     ]
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "web-vitals": "^2.1.4",
-    "@babel/polyfill": "^7.12.1"
-  },
-  "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12"
+    "react-scripts": "5.0.1"
   }
 }
