--- a/.github/workflows/release_package.yml
+++ b/.github/workflows/release_package.yml
@@ -50,8 +50,9 @@ jobs:
       - name: Push changes to repository
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git remote set-url origin "https://wellingtonsilverio:$GIT_TOKEN@github.com/wellingtonsilverio/react-clicktopay"
           git push origin && git push --tags
 
       # Update GitHub release with changelog
@@ -60,6 +61,5 @@ jobs:
         with:
           tag_name: ${{ env.NEW_VERSION }}
           body: ${{ steps.get-changelog.outputs.changelog }}
-          prerelease: ${{ startsWith(github.event.inputs.release-type, 'pre') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
